Fix horizontal scrollbar issue: animate in direction

--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -21,13 +21,13 @@
 
   &__text {
     opacity: 0;
-    transform: translateX(-30%);
+    transform: translateY(30%);
 
     transition: opacity 1.25s ease-out, transform 0.5s ease-out;
 
     &.animate-in {
       opacity: 1;
-      transform: translateX(0);
+      transform: translateY(0);
     }
 
     h2 {
@@ -64,13 +64,13 @@
 
   &__skills {
     opacity: 0;
-    transform: translateX(30%);
+    transform: translateY(-30%);
 
     transition: opacity 1.25s ease-out, transform 0.5s ease-out;
 
     &.animate-in {
       opacity: 1;
-      transform: translateX(0);
+      transform: translate(0, 0);
     }
   }
 
